# cosmos-monitor

./: .gitignore  CHANGELOG.md  KURULUM.md  LICENSE  README.md  hotpatch.sh  install.sh  patch.sh  pyproject.toml
assets/: logo.ansi
cosmos_monitor/: __init__.py  chain.py  cli.py  config.py  dashboard.py  fetcher.py
cosmos_monitor/web/: __init__.py  server.py
cosmos_monitor/web/static/: app.js  index.html  style.css
docs/: GITHUB_SETUP.md
