[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-monitor"
version = "0.0.1"
description = "Multi-chain Cosmos validator TUI dashboard"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Oshvank", email = "validator@oshvank.com" }]
requires-python = ">=3.11"
keywords = ["cosmos", "validator", "blockchain", "tui", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "textual>=0.59.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.scripts]
cosmos-monitor = "cosmos_monitor.cli:main"

[project.urls]
Homepage   = "https://github.com/Edsny1/cosmos-monitor"
Repository = "https://github.com/Edsny1/cosmos-monitor"
Issues     = "https://github.com/Edsny1/cosmos-monitor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["cosmos_monitor*"]

[tool.setuptools.package-data]
"cosmos_monitor" = ["../assets/*.ansi", "assets/*.ansi", "web/static/*"]
